# portfolio-backend

./: Dockerfile  Dockerfile.dev  main.py  pyproject.toml
app/: config.py  database.py  main.py  models.py  repositories.py  services.py  storage.py
local_db/: db.py  models.py
supabase/migrations/: 202606100001_create_cv_documents.sql  202606100002_create_cvs_storage_bucket.sql  202606100003_create_paper_documents.sql
supabase_db/: db.py
tests/: test_main.py
